# ChangeLog for dev-python/pyhistorian
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Nov 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.3.ebuild:
  Keyworded amd64.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> -pyhistorian-0.6.1.ebuild,
  pyhistorian-0.6.2.ebuild:
  Keyworded x86, removed stale version.

  12 Nov 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.2.ebuild:
  Keyworded amd64.

  06 Nov 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.1.ebuild:
  Keyworded amd64 [79e].

  06 Nov 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.1.ebuild:
  Keyworded x86 [b6c].

*pyhistorian-0.6.3 (23 Oct 2009)

  23 Oct 2009; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.3.ebuild:
  Version bump [944].

  14 Oct 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.1.ebuild,
  pyhistorian-0.6.2.ebuild:
  Switch to using jnrowe-pypi eclass.

*pyhistorian-0.6.2 (13 Oct 2009)

  13 Oct 2009; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.2.ebuild:
  Version bump [85a].

  06 Oct 2009; James Rowe <jnrowe@gmail.com> -pyhistorian-0.6.ebuild:
  Removing obsolete ebuild.

*pyhistorian-0.6.1 (06 Oct 2009)

  06 Oct 2009; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.1.ebuild:
  Version bump

  02 Oct 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.ebuild:
  Keyworded ~x86.

*pyhistorian-0.6 (02 Oct 2009)

  02 Oct 2009; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
