@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST pyhistorian-0.6.2.tar.gz 23777 RMD160 053e8a48c9da2f72b76a0f4cc6265b5dd31a43c0 SHA1 19a9e8eed46a63b5e4ee7059de16b022a46dffdc SHA256 58151a110ad419e6fe0eed55783d19fdebf662cc7b6bad4ae13ea1eee2251411
 DIST pyhistorian-0.6.3.tar.gz 23783 RMD160 2e25fc20537e58a97ee4698ae37d854c28ae2bcd SHA1 cda10d74d96e3bdd86a8cd57cd4070fc7240c5b1 SHA256 7a84085388f97d2899a6ffae3658493c9ffbc2aea8baa1286889d7982cef61a6
-EBUILD pyhistorian-0.6.2.ebuild 474 RMD160 17e4ac7b54ec483a7b1f8905c79d1e7546411af1 SHA1 cfd53d30695ee12713624531dbef26f6a8e1953d SHA256 66a99775f82148dbef211db9769b7eed167fe35e66fd1be2f17aac6ad6acbdb5
-EBUILD pyhistorian-0.6.3.ebuild 475 RMD160 b5b96d8007a19330f8efe08dff8d8c7fd67c38d2 SHA1 92a801f6a692b73698bb4b4d6f3da39759fe5ea0 SHA256 55f2a9a822be6e75afadc08d59dff7cee3ea93d53632774eea5b48eb84a84ebc
-MISC ChangeLog 1488 RMD160 1e8935f37fcb836d037ffeaa6bb1d74b5bfa50e4 SHA1 008e79716149295a5ca795de318f1837fa309327 SHA256 c2910dad0f690f736b9ef998cec50ae685cddd5acfb35a2f399beeeefeb6a477
+EBUILD pyhistorian-0.6.3.ebuild 474 RMD160 17e4ac7b54ec483a7b1f8905c79d1e7546411af1 SHA1 cfd53d30695ee12713624531dbef26f6a8e1953d SHA256 66a99775f82148dbef211db9769b7eed167fe35e66fd1be2f17aac6ad6acbdb5
+MISC ChangeLog 1606 RMD160 037935089171afed0d1eb04cde87d007aac88249 SHA1 0a03cabee82cc8f6700917c2fe0d5026e30f087a SHA256 0507abd7fadad78252eef94a145e9ee6c99a72c071ef759215243e158897e188
 MISC metadata.xml 541 RMD160 b52e243af05e53554445d9778a161a78a1d7d4e5 SHA1 4f6307743870414af0eeb7b6c0e03cfe343571ad SHA256 fedfc68319ce9c5e5b87c28c77b2624a3e353ce92ae335e41a678d956607a0d5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAksDmoMACgkQzJrj3cAXR0k+JwCglr0Y3aewkISmPN9XcCR/9HVC
-4K0An1037Rcnqthhqu/R6mFLzbZe3dtA
-=c/gn
+iEYEARECAAYFAksDnRsACgkQzJrj3cAXR0nfVACgpKf3/gLt+ojvkPWbz9S86Yzg
+lCUAoL8n3Mesg81ksJHfChr6RYqdc5bg
+=6bs5
 -----END PGP SIGNATURE-----
