@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20090804 >=app-shells/bash-3.2 virtual/python
-dev-python/should_dsl dev-python/termcolor virtual/python
-0
-http://pypi.python.org/packages/source/p/pyhistorian/pyhistorian-0.6.2.tar.gz
-
-http://github.com/hugobr/pyhistorian
-MIT
-A BDD tool for writing specs using Given-When-Then template
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare unpack
-
-
-
-
-
