@@ -6,7 +6,7 @@ http://pypi.python.org/packages/source/p/pyhistorian/pyhistorian-0.6.3.tar.gz
 http://github.com/hugobr/pyhistorian
 MIT
 A BDD tool for writing specs using Given-When-Then template
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
