@@ -1,4 +1,3 @@
-REM 2009-11-18 +1 MSG Stabilise x86 dev-python/pyhistorian-0.6.3 %a
 REM 2009-11-18 +1 MSG Stabilise x86 dev-python/restview-1.1.2 %a
 REM 2009-11-18 +1 MSG Stabilise x86 dev-util/ccontrol-0.9.1 %a
 REM 2009-11-18 +1 MSG Stabilise x86 dev-util/hg-git-0.1.0 %a
