@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Nov 2009; James Rowe <jnrowe@gmail.com> -pyhistorian-0.6.2.ebuild,
+  pyhistorian-0.6.3.ebuild:
+  Keyworded x86.
+
   18 Nov 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.3.ebuild:
   Keyworded amd64.
 
